Implement display and refresh of retrieved messages.

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,10 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <!-- Your HTML goes here! -->
+      <div class="messages"></div>
+      <form action="#" method="post"> 
+      <!-- # means form subitted to same page -->
+      </form>
     </div>
   </body>
 </html>
