--- a/client/index.html
+++ b/client/index.html
@@ -18,10 +18,12 @@
         <form action="#" method="post"> 
         <!-- # means form subitted to same page -->
         <label for="username">Username</label>
-        <input type="text" name="username"></input>
+        <input type="text" name="username" id="username"></input>
+        <label for="room">Room</label>
+        <input type="text" name="room" id="room"></input>
         <label for="message">Message</label>
-        <textarea name="message" cols="70" rows="4">Enter your message.</textarea>
-        <input type="submit" name="submit" value="Submit Message">
+        <textarea name="message" id="message" cols="70" rows="4">Enter your message.</textarea>
+        <input type="submit" name="submit" class="submit" value="Submit Message">
       </form>
       <div class="messages"></div>
     </div>
